style.css
@import url('https://fonts.googleapis.com/css2?family=Mulish:wght@400;700;900&family=Nunito+Sans:wght@300;400;600;700;800;900&display=swap');

* {
    box-sizing: border-box;
}

/* Dark Mode */
body {
    font-family: 'Nunito Sans', sans-serif;
    color: #EEEEEE;
    background-color: #232931;
    overflow-x: hidden;
}

h1 {
    font-size: 38px;
    font-weight: 500;
}

/* Navigation */
nav {
    display: flex;
    justify-content: space-between;
    height: 150px;
}

nav h2 {
    display: flex;
    align-items: center;
    margin-left: 80px;
}
.light-mode.name-logo h2 {
    color: #232931;
}

.name-logo h2 {
    color: #EEEEEE;
    transition: border-bottom 0.3s ease;
}

.light-mode.name-logo h2:hover {
    border-bottom: 2px solid transparent;
    border-color: #232931;
}

.name-logo h2:hover {
    border-bottom: 2px solid transparent;
    border-color: #EEEEEE;
}

.navbar ul {
    display: flex;
    justify-content: center;
    align-items: center;
    list-style: none;
    margin-right: 30px;
}

.navbar a {
    transition: color 0.4s ease;
    font-size: 18px;
    display: flex;
    align-items: center;
    margin-right: 70px;
    font-weight: 500;
    text-decoration: none;
    color: #c3cddddb;
}

.navbar a:hover {
    color: #EEEEEE;
}

.navbar img {
    cursor: pointer;
    display: flex;
    justify-content: center;
    align-items: center;
    background-color: #232931;
    border-color: #EEEEEE;
    width:50px;
}

/* Banner */
header {
    display: flex;
    justify-content: center;
    align-items: center;
    margin-left: 40px;
    gap: 70px;
}

header img {
    width: 600px;
}

.header-text {
    display: flex;
    flex-direction: column;
    justify-content: flex-start;
    align-items: flex-start;
    margin-bottom: 150px;
    width: 500px;
}

.header-text button {
    border-radius: 30px;
    border: none;
    padding: 1.5rem 2rem;
    margin: 5px;
    text-decoration: none;
    background: #EEEEEE;
    color: #232931;
    font-family: 'Mulish', sans-serif;
    font-weight: 600;
    font-size: 1.1rem;
    cursor: pointer;
    transition: 0.4s ease;
}

.header-text button a:link {
    text-decoration: none;
    color: #232931;
}

.header-text button a:visited {
    text-decoration: none;
    color: #232931;
}

.header-text button:hover {
    color: #EEEEEE;
    background: #7AC7C4;
}

.main-container {
    display: flex;
    justify-content: center;
    margin-right: 30px;
}

.main-text-container {
    display: flex;
    flex-direction: column;
    width: 50%;
    margin: 0 80px;
    padding: 100px;
    text-align: left;
    background-color: #EEEEEE;
    border-radius: 40px;
    color: #232931
}

.main-text-container h2 {
    font-size: 32px;
}

.main-text-container p {
    font-size: 22px;
}

.main-experience-container {
    width: 40%;
    padding: 50px 80px;
    justify-content: center;
}

.main-experience-container h2 {
    text-align: center;
}

.main-experience-container ul {
    display: flex;
    justify-content: center;
    align-items: center;
    flex-wrap: wrap;
    gap: 70px;
}

.main-experience-container li {
    display: flex;
    flex-direction: column;
    align-items: center;
    gap: 5px;
} 

.main-experience-container img {
    width: 30px;
}

.project-previews {
    display: flex;
    justify-content: space-around;
    flex-wrap: wrap;
    gap: 50px;
}

.image {
    width: 600px;
    height: 300px;
    border-radius: 15px;
  }

/* Light Mode */
.light-mode {
    background-color: #EEEEEE;
    color: #232931;
}

.light-mode.navbar a {
    transition: color 0.4s ease;
    font-size: 18px;
    display: flex;
    align-items: center;
    margin-right: 70px;
    font-weight: 500;
    text-decoration: none;
    color: #232931ae;
}

.light-mode.navbar a:hover {
    color: #232931;
}

.light-mode.navbar a:visited {
    color: #232931ae;
}

.light-mode.navbar img {
    cursor: pointer;
    display: flex;
    justify-content: center;
    align-items: center;
    background-color: #EEEEEE;
    border-color: #232931;
    width:50px;
}

.light-mode.header-text button {
    border-radius: 30px;
    border: none;
    padding: 1.5rem 2rem;
    margin: 5px;
    text-decoration: none;
    background: #232931;
    color: #EEEEEE;
    font-family: 'Mulish', sans-serif;
    font-weight: 600;
    font-size: 1.1rem;
    cursor: pointer;
    transition: 0.4s ease;
}

.light-mode.header-text button a:link {
    text-decoration: none;
    color: #EEEEEE;
}

.light-mode.header-text button a:visited {
    text-decoration: none;
    color: #EEEEEE;
}

.light-mode.header-text button:hover {
    color: #EEEEEE;
    background: #7AC7C4;
}

.light-mode.main-text-container {
    display: flex;
    flex-direction: column;
    width: 50%;
    margin: 0 80px;
    padding: 100px;
    text-align: left;
    background-color: #232931;
    border-radius: 40px;
    color: #EEEEEE
}

/* Mobile Response */
@media only screen and (max-width: 820px) {
    nav ul li {
        display: none;
    }
    
    nav {
        justify-content: space-between;
    }

    .light-mode body {
        margin: 0;
        width: 100%;
        overflow-x: hidden;
    }

    body {
        margin: 0;
        width: 100%;
        overflow-x: hidden;
    }

    header {
        flex-direction: column;
        margin-right: 30px;
        gap: 0;
    }

    header button {
        width: 98%;
    }

    header img {
        width: 500px;
        gap: 0;
    }

    .header-text {
        margin: 0 10px 0 0;
        text-align: center;
    }

    .main-container {
        width: 100%;
        flex-direction: column;
    }

    .light-mode.main-text-container {
        width: 100%;
        margin: 0;
        padding: 15%;
        border-radius: 0;
        align-items: center;
    }

    .main-text-container {
        width: 100%;
        margin: 0;
        padding: 15%;
        border-radius: 0;
        align-items: center;
    }

    .main-text-container p {
        text-align: center;
    }

    hr {
        color: #EEEEEE;
        width: 30%;
        margin-top: 50px;
    }

    .main-experience-container {
        display: flex;
        flex-direction: column;
        width: 100%;
    }

    .main-experience-container ul {
        margin-right: 30px;
    }
}

